name:                flaw-ffi
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-ffi

library
  exposed-modules:
    Flaw.FFI
  if os(windows)
    exposed-modules:
      Flaw.FFI.COM
      Flaw.FFI.COM.TH
      Flaw.FFI.Win32
    other-modules:
      Flaw.FFI.COM.Internal
  -- other-extensions:    
  build-depends:       base, bytestring, resourcet, template-haskell, text, uuid
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if os(windows)
    extra-libraries:
      ole32
