name:                flaw-ffmpeg
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-ffmpeg

library
  exposed-modules:
    Flaw.Media.FFmpeg
  other-modules:
  build-depends:
    base
    , bytestring
    , flaw-audio
    , flaw-base
    , pipes
    , text
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
  c-sources:           src/flaw-ffmpeg.c
  pkgconfig-depends:   libavcodec, libavformat, libavutil, libswscale
