name:                flaw-font-fhi
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-font-fhi

library
  exposed-modules:
    Flaw.Graphics.Font.FreeType
    Flaw.Graphics.Font.Harfbuzz
  other-modules:
    Flaw.Graphics.Font.FreeType.FFI
  build-depends:
    base
    , bytestring
    , flaw-ffi
    , flaw-font
    , flaw-math
    , JuicyPixels
    , mtl
    , text
    , vector
  default-language:    Haskell2010
  c-sources:
    -- FreeType
    src/freetype/src/autofit/autofit.c
    src/freetype/src/base/ftbase.c
    src/freetype/src/base/ftinit.c
    src/freetype/src/base/ftmm.c
    src/freetype/src/base/ftsystem.c
    src/freetype/src/base/ftbitmap.c
    src/freetype/src/base/ftglyph.c
    src/freetype/src/bdf/bdf.c
    src/freetype/src/bzip2/ftbzip2.c
    src/freetype/src/cache/ftcache.c
    src/freetype/src/cff/cff.c
    src/freetype/src/cid/type1cid.c
    src/freetype/src/gxvalid/gxvalid.c
    src/freetype/src/gzip/ftgzip.c
    src/freetype/src/lzw/ftlzw.c
    src/freetype/src/otvalid/otvalid.c
    src/freetype/src/pcf/pcf.c
    src/freetype/src/pfr/pfr.c
    src/freetype/src/psaux/psaux.c
    src/freetype/src/pshinter/pshinter.c
    src/freetype/src/psnames/psnames.c
    src/freetype/src/raster/raster.c
    src/freetype/src/sfnt/sfnt.c
    src/freetype/src/smooth/smooth.c
    src/freetype/src/truetype/truetype.c
    src/freetype/src/type1/type1.c
    src/freetype/src/type42/type42.c
    src/freetype/src/winfonts/winfnt.c
    -- Harfbuzz
    src/harfbuzz/src/hb-blob.cc
    src/harfbuzz/src/hb-buffer-serialize.cc
    src/harfbuzz/src/hb-buffer.cc
    src/harfbuzz/src/hb-common.cc
    -- src/harfbuzz/src/hb-coretext.cc
    src/harfbuzz/src/hb-face.cc
    -- src/harfbuzz/src/hb-fallback-shape.cc
    src/harfbuzz/src/hb-font.cc
    src/harfbuzz/src/hb-set.cc
    src/harfbuzz/src/hb-shape.cc
    src/harfbuzz/src/hb-shape-plan.cc
    src/harfbuzz/src/hb-shaper.cc
    -- src/harfbuzz/src/hb-tt-font.cc
    src/harfbuzz/src/hb-ucdn.cc
    src/harfbuzz/src/hb-unicode.cc
    -- FreeType
    src/harfbuzz/src/hb-ft.cc
    -- OpenType
    src/harfbuzz/src/hb-ot-layout.cc
    src/harfbuzz/src/hb-ot-map.cc
    src/harfbuzz/src/hb-ot-math.cc
    src/harfbuzz/src/hb-ot-shape.cc
    src/harfbuzz/src/hb-ot-shape-complex-arabic.cc
    src/harfbuzz/src/hb-ot-shape-complex-default.cc
    src/harfbuzz/src/hb-ot-shape-complex-hangul.cc
    src/harfbuzz/src/hb-ot-shape-complex-hebrew.cc
    src/harfbuzz/src/hb-ot-shape-complex-indic-table.cc
    src/harfbuzz/src/hb-ot-shape-complex-indic.cc
    src/harfbuzz/src/hb-ot-shape-complex-myanmar.cc
    src/harfbuzz/src/hb-ot-shape-complex-thai.cc
    src/harfbuzz/src/hb-ot-shape-complex-tibetan.cc
    src/harfbuzz/src/hb-ot-shape-complex-use.cc
    src/harfbuzz/src/hb-ot-shape-complex-use-table.cc
    src/harfbuzz/src/hb-ot-shape-fallback.cc
    src/harfbuzz/src/hb-ot-shape-normalize.cc
    src/harfbuzz/src/hb-ot-tag.cc
    src/harfbuzz/src/hb-ot-var.cc
    -- UCDN
    src/ucdn/ucdn.c
    -- ICU
    src/icu/source/common/appendable.cpp
    src/icu/source/common/bmpset.cpp
    src/icu/source/common/brkeng.cpp
    src/icu/source/common/brkiter.cpp
    src/icu/source/common/bytestream.cpp
    src/icu/source/common/bytestrie.cpp
    src/icu/source/common/bytestriebuilder.cpp
    src/icu/source/common/bytestrieiterator.cpp
    src/icu/source/common/caniter.cpp
    src/icu/source/common/chariter.cpp
    src/icu/source/common/charstr.cpp
    src/icu/source/common/cmemory.cpp
    src/icu/source/common/cstr.cpp
    src/icu/source/common/cstring.cpp
    src/icu/source/common/cwchar.cpp
    src/icu/source/common/dictbe.cpp
    src/icu/source/common/dictionarydata.cpp
    src/icu/source/common/dtintrv.cpp
    src/icu/source/common/edits.cpp
    src/icu/source/common/errorcode.cpp
    src/icu/source/common/filteredbrk.cpp
    src/icu/source/common/filterednormalizer2.cpp
    src/icu/source/common/icudataver.cpp
    src/icu/source/common/icuplug.cpp
    src/icu/source/common/listformatter.cpp
    src/icu/source/common/loadednormalizer2impl.cpp
    src/icu/source/common/locavailable.cpp
    src/icu/source/common/locbased.cpp
    src/icu/source/common/locdispnames.cpp
    src/icu/source/common/locdspnm.cpp
    src/icu/source/common/locid.cpp
    src/icu/source/common/loclikely.cpp
    src/icu/source/common/locmap.cpp
    src/icu/source/common/locresdata.cpp
    src/icu/source/common/locutil.cpp
    src/icu/source/common/messagepattern.cpp
    src/icu/source/common/normalizer2.cpp
    src/icu/source/common/normalizer2impl.cpp
    src/icu/source/common/normlzr.cpp
    src/icu/source/common/parsepos.cpp
    src/icu/source/common/patternprops.cpp
    src/icu/source/common/pluralmap.cpp
    src/icu/source/common/propname.cpp
    src/icu/source/common/propsvec.cpp
    src/icu/source/common/punycode.cpp
    src/icu/source/common/putil.cpp
    src/icu/source/common/rbbi.cpp
    src/icu/source/common/rbbidata.cpp
    src/icu/source/common/rbbinode.cpp
    src/icu/source/common/rbbirb.cpp
    src/icu/source/common/rbbiscan.cpp
    src/icu/source/common/rbbisetb.cpp
    src/icu/source/common/rbbistbl.cpp
    src/icu/source/common/rbbitblb.cpp
    src/icu/source/common/resbund.cpp
    src/icu/source/common/resbund_cnv.cpp
    src/icu/source/common/resource.cpp
    src/icu/source/common/ruleiter.cpp
    src/icu/source/common/schriter.cpp
    src/icu/source/common/serv.cpp
    src/icu/source/common/servlk.cpp
    src/icu/source/common/servlkf.cpp
    src/icu/source/common/servls.cpp
    src/icu/source/common/servnotf.cpp
    src/icu/source/common/servrbf.cpp
    src/icu/source/common/servslkf.cpp
    src/icu/source/common/sharedobject.cpp
    src/icu/source/common/simpleformatter.cpp
    src/icu/source/common/stringpiece.cpp
    src/icu/source/common/stringtriebuilder.cpp
    src/icu/source/common/uarrsort.cpp
    src/icu/source/common/ubidi.cpp
    src/icu/source/common/ubidi_props.cpp
    src/icu/source/common/ubidiln.cpp
    src/icu/source/common/ubiditransform.cpp
    src/icu/source/common/ubidiwrt.cpp
    src/icu/source/common/ubrk.cpp
    src/icu/source/common/ucase.cpp
    src/icu/source/common/ucasemap.cpp
    src/icu/source/common/ucasemap_titlecase_brkiter.cpp
    src/icu/source/common/ucat.cpp
    src/icu/source/common/uchar.cpp
    src/icu/source/common/ucharstrie.cpp
    src/icu/source/common/ucharstriebuilder.cpp
    src/icu/source/common/ucharstrieiterator.cpp
    src/icu/source/common/uchriter.cpp
    src/icu/source/common/ucln_cmn.cpp
    src/icu/source/common/ucmndata.cpp
    src/icu/source/common/ucnv.cpp
    src/icu/source/common/ucnv2022.cpp
    src/icu/source/common/ucnv_bld.cpp
    src/icu/source/common/ucnv_cb.cpp
    src/icu/source/common/ucnv_cnv.cpp
    src/icu/source/common/ucnv_ct.cpp
    src/icu/source/common/ucnv_err.cpp
    src/icu/source/common/ucnv_ext.cpp
    src/icu/source/common/ucnv_io.cpp
    src/icu/source/common/ucnv_lmb.cpp
    src/icu/source/common/ucnv_set.cpp
    src/icu/source/common/ucnv_u16.cpp
    src/icu/source/common/ucnv_u32.cpp
    src/icu/source/common/ucnv_u7.cpp
    src/icu/source/common/ucnv_u8.cpp
    src/icu/source/common/ucnvbocu.cpp
    src/icu/source/common/ucnvdisp.cpp
    src/icu/source/common/ucnvhz.cpp
    src/icu/source/common/ucnvisci.cpp
    src/icu/source/common/ucnvlat1.cpp
    src/icu/source/common/ucnvmbcs.cpp
    src/icu/source/common/ucnvscsu.cpp
    src/icu/source/common/ucnvsel.cpp
    src/icu/source/common/ucol_swp.cpp
    src/icu/source/common/ucurr.cpp
    src/icu/source/common/udata.cpp
    src/icu/source/common/udatamem.cpp
    src/icu/source/common/udataswp.cpp
    src/icu/source/common/uenum.cpp
    src/icu/source/common/uhash.cpp
    src/icu/source/common/uhash_us.cpp
    src/icu/source/common/uidna.cpp
    src/icu/source/common/uinit.cpp
    src/icu/source/common/uinvchar.cpp
    src/icu/source/common/uiter.cpp
    src/icu/source/common/ulist.cpp
    src/icu/source/common/ulistformatter.cpp
    src/icu/source/common/uloc.cpp
    src/icu/source/common/uloc_keytype.cpp
    src/icu/source/common/uloc_tag.cpp
    src/icu/source/common/umapfile.cpp
    src/icu/source/common/umath.cpp
    src/icu/source/common/umutex.cpp
    src/icu/source/common/unames.cpp
    src/icu/source/common/unifiedcache.cpp
    src/icu/source/common/unifilt.cpp
    src/icu/source/common/unifunct.cpp
    src/icu/source/common/uniset.cpp
    src/icu/source/common/uniset_closure.cpp
    src/icu/source/common/uniset_props.cpp
    src/icu/source/common/unisetspan.cpp
    src/icu/source/common/unistr.cpp
    src/icu/source/common/unistr_case.cpp
    src/icu/source/common/unistr_case_locale.cpp
    src/icu/source/common/unistr_cnv.cpp
    src/icu/source/common/unistr_props.cpp
    src/icu/source/common/unistr_titlecase_brkiter.cpp
    src/icu/source/common/unorm.cpp
    src/icu/source/common/unormcmp.cpp
    src/icu/source/common/uobject.cpp
    src/icu/source/common/uprops.cpp
    src/icu/source/common/ures_cnv.cpp
    src/icu/source/common/uresbund.cpp
    src/icu/source/common/uresdata.cpp
    src/icu/source/common/usc_impl.cpp
    src/icu/source/common/uscript.cpp
    src/icu/source/common/uscript_props.cpp
    src/icu/source/common/uset.cpp
    src/icu/source/common/uset_props.cpp
    src/icu/source/common/usetiter.cpp
    src/icu/source/common/ushape.cpp
    src/icu/source/common/usprep.cpp
    src/icu/source/common/ustack.cpp
    src/icu/source/common/ustr_cnv.cpp
    src/icu/source/common/ustr_titlecase_brkiter.cpp
    src/icu/source/common/ustr_wcs.cpp
    src/icu/source/common/ustrcase.cpp
    src/icu/source/common/ustrcase_locale.cpp
    src/icu/source/common/ustrenum.cpp
    src/icu/source/common/ustrfmt.cpp
    src/icu/source/common/ustring.cpp
    src/icu/source/common/ustrtrns.cpp
    src/icu/source/common/utext.cpp
    src/icu/source/common/utf_impl.cpp
    src/icu/source/common/util.cpp
    src/icu/source/common/util_props.cpp
    src/icu/source/common/utrace.cpp
    src/icu/source/common/utrie.cpp
    src/icu/source/common/utrie2.cpp
    src/icu/source/common/utrie2_builder.cpp
    src/icu/source/common/uts46.cpp
    src/icu/source/common/utypes.cpp
    src/icu/source/common/uvector.cpp
    src/icu/source/common/uvectr32.cpp
    src/icu/source/common/uvectr64.cpp
    src/icu/source/common/wintz.cpp
    src/icu/source/stubdata/stubdata.cpp
    -- Helpers
    src/flaw-ft.c
  include-dirs:        src/freetype/include, src/harfbuzz-generated, src/harfbuzz/src, src/harfbuzz/src/hb-ucdn, src/ucdn, src/icu/source/common
  cc-options:          -DFT2_BUILD_LIBRARY -DHAVE_OT -DHAVE_UCDN -DU_STATIC_IMPLEMENTATION -DU_ENABLE_DYLOAD=0 -DU_COMMON_IMPLEMENTATION -O3 -fno-exceptions
  if os(windows)
    if arch(x86_64)
      extra-ghci-libraries: gcc_s_seh-1
    else
      extra-ghci-libraries: gcc_s_dw2-1
