name:                flaw-font-icu
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-font-icu

library
  exposed-modules:
  other-modules:
  build-depends:
  default-language:    Haskell2010
  c-sources:
    src/icu/source/common/appendable.cpp
    src/icu/source/common/bmpset.cpp
    src/icu/source/common/brkeng.cpp
    src/icu/source/common/brkiter.cpp
    src/icu/source/common/bytestream.cpp
    src/icu/source/common/bytestrie.cpp
    src/icu/source/common/bytestriebuilder.cpp
    src/icu/source/common/bytestrieiterator.cpp
    src/icu/source/common/caniter.cpp
    src/icu/source/common/chariter.cpp
    src/icu/source/common/charstr.cpp
    src/icu/source/common/cmemory.cpp
    src/icu/source/common/cstr.cpp
    src/icu/source/common/cstring.cpp
    src/icu/source/common/cwchar.cpp
    src/icu/source/common/dictbe.cpp
    src/icu/source/common/dictionarydata.cpp
    src/icu/source/common/dtintrv.cpp
    src/icu/source/common/edits.cpp
    src/icu/source/common/errorcode.cpp
    src/icu/source/common/filteredbrk.cpp
    src/icu/source/common/filterednormalizer2.cpp
    src/icu/source/common/icudataver.cpp
    src/icu/source/common/icuplug.cpp
    src/icu/source/common/listformatter.cpp
    src/icu/source/common/loadednormalizer2impl.cpp
    src/icu/source/common/locavailable.cpp
    src/icu/source/common/locbased.cpp
    src/icu/source/common/locdispnames.cpp
    src/icu/source/common/locdspnm.cpp
    src/icu/source/common/locid.cpp
    src/icu/source/common/loclikely.cpp
    src/icu/source/common/locmap.cpp
    src/icu/source/common/locresdata.cpp
    src/icu/source/common/locutil.cpp
    src/icu/source/common/messagepattern.cpp
    src/icu/source/common/normalizer2.cpp
    src/icu/source/common/normalizer2impl.cpp
    src/icu/source/common/normlzr.cpp
    src/icu/source/common/parsepos.cpp
    src/icu/source/common/patternprops.cpp
    src/icu/source/common/pluralmap.cpp
    src/icu/source/common/propname.cpp
    src/icu/source/common/propsvec.cpp
    src/icu/source/common/punycode.cpp
    src/icu/source/common/putil.cpp
    src/icu/source/common/rbbi.cpp
    src/icu/source/common/rbbidata.cpp
    src/icu/source/common/rbbinode.cpp
    src/icu/source/common/rbbirb.cpp
    src/icu/source/common/rbbiscan.cpp
    src/icu/source/common/rbbisetb.cpp
    src/icu/source/common/rbbistbl.cpp
    src/icu/source/common/rbbitblb.cpp
    src/icu/source/common/resbund.cpp
    src/icu/source/common/resbund_cnv.cpp
    src/icu/source/common/resource.cpp
    src/icu/source/common/ruleiter.cpp
    src/icu/source/common/schriter.cpp
    src/icu/source/common/serv.cpp
    src/icu/source/common/servlk.cpp
    src/icu/source/common/servlkf.cpp
    src/icu/source/common/servls.cpp
    src/icu/source/common/servnotf.cpp
    src/icu/source/common/servrbf.cpp
    src/icu/source/common/servslkf.cpp
    src/icu/source/common/sharedobject.cpp
    src/icu/source/common/simpleformatter.cpp
    src/icu/source/common/stringpiece.cpp
    src/icu/source/common/stringtriebuilder.cpp
    src/icu/source/common/uarrsort.cpp
    src/icu/source/common/ubidi.cpp
    src/icu/source/common/ubidi_props.cpp
    src/icu/source/common/ubidiln.cpp
    src/icu/source/common/ubiditransform.cpp
    src/icu/source/common/ubidiwrt.cpp
    src/icu/source/common/ubrk.cpp
    src/icu/source/common/ucase.cpp
    src/icu/source/common/ucasemap.cpp
    src/icu/source/common/ucasemap_titlecase_brkiter.cpp
    src/icu/source/common/ucat.cpp
    src/icu/source/common/uchar.cpp
    src/icu/source/common/ucharstrie.cpp
    src/icu/source/common/ucharstriebuilder.cpp
    src/icu/source/common/ucharstrieiterator.cpp
    src/icu/source/common/uchriter.cpp
    src/icu/source/common/ucln_cmn.cpp
    src/icu/source/common/ucmndata.cpp
    src/icu/source/common/ucnv.cpp
    src/icu/source/common/ucnv2022.cpp
    src/icu/source/common/ucnv_bld.cpp
    src/icu/source/common/ucnv_cb.cpp
    src/icu/source/common/ucnv_cnv.cpp
    src/icu/source/common/ucnv_ct.cpp
    src/icu/source/common/ucnv_err.cpp
    src/icu/source/common/ucnv_ext.cpp
    src/icu/source/common/ucnv_io.cpp
    src/icu/source/common/ucnv_lmb.cpp
    src/icu/source/common/ucnv_set.cpp
    src/icu/source/common/ucnv_u16.cpp
    src/icu/source/common/ucnv_u32.cpp
    src/icu/source/common/ucnv_u7.cpp
    src/icu/source/common/ucnv_u8.cpp
    src/icu/source/common/ucnvbocu.cpp
    src/icu/source/common/ucnvdisp.cpp
    src/icu/source/common/ucnvhz.cpp
    src/icu/source/common/ucnvisci.cpp
    src/icu/source/common/ucnvlat1.cpp
    src/icu/source/common/ucnvmbcs.cpp
    src/icu/source/common/ucnvscsu.cpp
    src/icu/source/common/ucnvsel.cpp
    src/icu/source/common/ucol_swp.cpp
    src/icu/source/common/ucurr.cpp
    src/icu/source/common/udata.cpp
    src/icu/source/common/udatamem.cpp
    src/icu/source/common/udataswp.cpp
    src/icu/source/common/uenum.cpp
    src/icu/source/common/uhash.cpp
    src/icu/source/common/uhash_us.cpp
    src/icu/source/common/uidna.cpp
    src/icu/source/common/uinit.cpp
    src/icu/source/common/uinvchar.cpp
    src/icu/source/common/uiter.cpp
    src/icu/source/common/ulist.cpp
    src/icu/source/common/ulistformatter.cpp
    src/icu/source/common/uloc.cpp
    src/icu/source/common/uloc_keytype.cpp
    src/icu/source/common/uloc_tag.cpp
    src/icu/source/common/umapfile.cpp
    src/icu/source/common/umath.cpp
    src/icu/source/common/umutex.cpp
    src/icu/source/common/unames.cpp
    src/icu/source/common/unifiedcache.cpp
    src/icu/source/common/unifilt.cpp
    src/icu/source/common/unifunct.cpp
    src/icu/source/common/uniset.cpp
    src/icu/source/common/uniset_closure.cpp
    src/icu/source/common/uniset_props.cpp
    src/icu/source/common/unisetspan.cpp
    src/icu/source/common/unistr.cpp
    src/icu/source/common/unistr_case.cpp
    src/icu/source/common/unistr_case_locale.cpp
    src/icu/source/common/unistr_cnv.cpp
    src/icu/source/common/unistr_props.cpp
    src/icu/source/common/unistr_titlecase_brkiter.cpp
    src/icu/source/common/unorm.cpp
    src/icu/source/common/unormcmp.cpp
    src/icu/source/common/uobject.cpp
    src/icu/source/common/uprops.cpp
    src/icu/source/common/ures_cnv.cpp
    src/icu/source/common/uresbund.cpp
    src/icu/source/common/uresdata.cpp
    src/icu/source/common/usc_impl.cpp
    src/icu/source/common/uscript.cpp
    src/icu/source/common/uscript_props.cpp
    src/icu/source/common/uset.cpp
    src/icu/source/common/uset_props.cpp
    src/icu/source/common/usetiter.cpp
    src/icu/source/common/ushape.cpp
    src/icu/source/common/usprep.cpp
    src/icu/source/common/ustack.cpp
    src/icu/source/common/ustr_cnv.cpp
    src/icu/source/common/ustr_titlecase_brkiter.cpp
    src/icu/source/common/ustr_wcs.cpp
    src/icu/source/common/ustrcase.cpp
    src/icu/source/common/ustrcase_locale.cpp
    src/icu/source/common/ustrenum.cpp
    src/icu/source/common/ustrfmt.cpp
    src/icu/source/common/ustring.cpp
    src/icu/source/common/ustrtrns.cpp
    src/icu/source/common/utext.cpp
    src/icu/source/common/utf_impl.cpp
    src/icu/source/common/util.cpp
    src/icu/source/common/util_props.cpp
    src/icu/source/common/utrace.cpp
    src/icu/source/common/utrie.cpp
    src/icu/source/common/utrie2.cpp
    src/icu/source/common/utrie2_builder.cpp
    src/icu/source/common/uts46.cpp
    src/icu/source/common/utypes.cpp
    src/icu/source/common/uvector.cpp
    src/icu/source/common/uvectr32.cpp
    src/icu/source/common/uvectr64.cpp
    src/icu/source/common/wintz.cpp
    src/icu/source/stubdata/stubdata.cpp
  include-dirs:        src/icu/source/common
  cc-options:          -std=c++14 -DU_STATIC_IMPLEMENTATION -DU_ENABLE_DYLOAD=0 -DU_COMMON_IMPLEMENTATION -DUCONFIG_NO_FILE_IO=0 -O3 -fno-exceptions
  extra-libraries:     stdc++
  if os(windows)
    cc-options:          -DWINVER=0x0601
    if arch(x86_64)
      extra-ghci-libraries: gcc_s_seh-1
    else
      extra-ghci-libraries: gcc_s_dw2-1
