name:                flaw-font
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-font

library
  exposed-modules:
    Flaw.Graphics.Font
    Flaw.Graphics.Font.FreeType
    Flaw.Graphics.Font.Util
  other-modules:
  -- other-extensions:    
  build-depends:       base, bytestring, flaw-base, flaw-graphics, freetype2, JuicyPixels, vector
  -- hs-source-dirs:      
  default-language:    Haskell2010
