name:                flaw-font
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-font

library
  exposed-modules:
    Flaw.Graphics.Font
    Flaw.Graphics.Font.Render
    Flaw.Graphics.Font.Script
    Flaw.Graphics.Font.Util
  other-modules:
  build-depends:
    base
    , bytestring
    , data-default
    , exceptions
    , flaw-base
    , flaw-graphics
    , flaw-math
    , JuicyPixels
    , mtl
    , stm
    , text
    , unordered-containers
    , vector
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
