name:                flaw-game
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-game

library
  exposed-modules:
    Flaw.Game
    Flaw.Game.Texture
  other-modules:
  -- other-extensions:    
  build-depends:       base, flaw-build, flaw-graphics, flaw-input, flaw-window, resourcet, template-haskell, text, time, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       flaw-webgl
  else
    build-depends:       bytestring, flaw-asset
    if os(windows)
      build-depends:       flaw-dx11
