name:                flaw-game
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-game

library
  exposed-modules:
    Flaw.Game.Socket
    Flaw.Game.TcpClient
    Flaw.Game.TcpServer
    Flaw.Game.TlsSocket
  other-modules:
  -- other-extensions:    
  build-depends:       base, bytestring, data-default-class, flaw-base, network, stm, tls >= 1.3.1, x509-system
  -- hs-source-dirs:      
  default-language:    Haskell2010
