name:                flaw-gl-mesa
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-gl-mesa

library
  exposed-modules:
    Flaw.Graphics.OpenGL.Mesa
  other-modules:
  build-depends:
    base
    , bytestring
    , flaw-base
    , flaw-graphics
    , flaw-gl
    , flaw-math
    , OpenGLRaw
  default-language:    Haskell2010
  extra-libraries:     OSMesa
