name:                flaw-gl-win32
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-gl-win32

library
  exposed-modules:
    Flaw.Graphics.OpenGL.Win32
  other-modules:
  build-depends:
    base
    , flaw-base
    , flaw-ffi
    , flaw-gl
    , flaw-graphics
    , flaw-math
    , flaw-window
    , stm
    , text
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
  c-sources:
    src/win32_gl.c
  cc-options:          -O3
