name:                flaw-gl
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-gl

library
  exposed-modules:
  other-modules:
    Flaw.Graphics.GlContext
  build-depends:       base, bytestring, cereal, flaw-base, flaw-glsl, flaw-graphics, flaw-math, flaw-window, text, vector
  if impl(ghcjs)
    exposed-modules:
      Flaw.Graphics.WebGL
    other-modules:
      Flaw.Graphics.WebGL.FFI
    build-depends:       ghcjs-base, ghcjs-dom
  else
    exposed-modules:
      Flaw.Graphics.OpenGL
    other-modules:
      Flaw.Graphics.OpenGL.FFI
    build-depends:       flaw-sdl, OpenGLRaw, sdl2
  -- hs-source-dirs:      
  default-language:    Haskell2010
