name:                flaw-gl
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-gl

flag gldebug
  description:       verbose opengl runtime error checks
  default:           False
  manual:            True

library
  exposed-modules:
    Flaw.Graphics.GlContext
    Flaw.Graphics.GLSL
  other-modules:
  build-depends:       base, bytestring, cereal, cereal-text, flaw-base, flaw-graphics, flaw-math, flaw-sl, text, vector
  if flag(gldebug)
    cpp-options:         -DGL_ERROR_LEVEL=0
  else
    cpp-options:         -DGL_ERROR_LEVEL=1
  if impl(ghcjs)
    exposed-modules:
      Flaw.Graphics.WebGL
    other-modules:
      Flaw.Graphics.WebGL.FFI
    build-depends:       flaw-js, flaw-window, ghcjs-base
    js-sources:        js/flaw-webgl.js
  else
    exposed-modules:
      Flaw.Graphics.OpenGL
    other-modules:
      Flaw.Graphics.OpenGL.FFI
    build-depends:       OpenGLRaw
  -- hs-source-dirs:      
  default-language:    Haskell2010
