name:                flaw-graphics
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-graphics

library
  exposed-modules:
    Flaw.Graphics
    Flaw.Graphics.Blend
    Flaw.Graphics.Internal
    Flaw.Graphics.Program
    Flaw.Graphics.Program.Internal
    Flaw.Graphics.Sampler
    Flaw.Graphics.Texture
  -- other-extensions:    
  build-depends:       base, bytestring, flaw-base, flaw-math, mtl, text, template-haskell, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
