name:                flaw-input
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-graphics

library
  exposed-modules:
    Flaw.Input
    Flaw.Input.Gamepad
    Flaw.Input.Mouse
    Flaw.Input.Keyboard
  other-modules:
    Flaw.Input.Basic
  build-depends:
    array
    , base
    , flaw-base
    , flaw-ffi
    , flaw-window
    , stm
  ghc-options:         -Wall
  default-language:    Haskell2010
  if impl(ghcjs)
    exposed-modules:
      Flaw.Input.Web
    build-depends:
      ghcjs-base
    js-sources:          js/flaw-input.js
  else
    if os(windows)
      exposed-modules:
        Flaw.Input.Win32
    else
      exposed-modules:
        Flaw.Input.Sdl
      build-depends:
        bytestring
        , sdl2
        , unordered-containers
        , text
