name:                flaw-itch-webapi
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-itch-webapi

library
  exposed-modules:
    Flaw.Itch.WebApi
  build-depends:       aeson, base, bytestring, hashable, http-client, memory, text, unordered-containers
  default-language:    Haskell2010
